# Projeto-Precificacao-Inicial

./: README.md  pyproject.toml  requirements.txt
src/frontend/: app.py
src/frontend/backend/: calculate_price.py  database.py  example.db  main.py  models.py  schema.py
